After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796957 - closedcaptions: fixes when compiling with clang-6
closedcaptions: fixes when compiling with clang-6
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-08-14 10:46 UTC by Víctor Manuel Jáquez Leal
Modified: 2018-08-14 11:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
closedcaption: avoid implicit convertion of enums (1.42 KB, patch)
2018-08-14 10:46 UTC, Víctor Manuel Jáquez Leal
committed Details | Review
closedcaption: comment out unused function (1.06 KB, patch)
2018-08-14 10:46 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2018-08-14 10:46:43 UTC
Compling gstreamer with clang-6 I got hit with these two errors. The 
following patches kind of fix them.
Comment 1 Víctor Manuel Jáquez Leal 2018-08-14 10:46:50 UTC
Created attachment 373326 [details] [review]
closedcaption: avoid implicit convertion of enums

When compiling with clang-6 this error pops out:

raw_decoder.c:1011:62: error: implicit conversion from enumeration
type 'const vbi_modulation' to different enumeration type
'vbi3_modulation' [-Werror,-Wenum-conversion]

This is because function vbi3_bit_slicer_set_params() sets
vbi3_modulation as enum type parameter, nonetheless vbi_modulation
enum is passed. Both enums looks semantically equal, thus the fix is a
simple cast.
Comment 2 Víctor Manuel Jáquez Leal 2018-08-14 10:46:56 UTC
Created attachment 373327 [details] [review]
closedcaption: comment out unused function

When compiling with clang-6 this error raises:

raw_decoder.c:411:1: error: unused function 'cpr1204_crc'
[-Werror,-Wunused-function]

This patch only comments it out.
Comment 3 Víctor Manuel Jáquez Leal 2018-08-14 11:33:20 UTC
Attachment 373326 [details] pushed as 808b404 - closedcaption: avoid implicit convertion of enums
Attachment 373327 [details] pushed as 85f142a - closedcaption: comment out unused function