ext/closedcaption/raw_decoder.c
@@ -1008,7 +1008,8 @@ vbi3_raw_decoder_add_services (vbi3_raw_decoder * rd,
             par->cri_rate,
             cri_end,
             (par->cri_frc & ((1U << par->frc_bits) - 1)),
-            par->frc_bits, par->payload, par->bit_rate, par->modulation)) {
+            par->frc_bits, par->payload, par->bit_rate,
+            (vbi3_modulation) par->modulation)) {
       assert (!"bit_slicer_set_params");
     }
 
